--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,7 +47,7 @@ body {
 }
 
 .main-content {
-  padding-top: 80px; /* Adjust based on your navbar height */
+  padding-top: 80px; 
 }
 
 .cursive-text {
@@ -56,7 +56,74 @@ body {
   color: #5e7c98;
 }
 
-.next-big-text{
-  font-family:"Courier New",monospace;
+.next-big-text {
+  font-family: "Courier New", monospace;
   font-size: 2rem;
+}
+
+.mission-vision-section {
+  margin-top: 60px; 
+  padding: 30px;
+  background-color: #d4d2d6;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mission-vision-section p {
+  font-family: "Courier New", monospace;
+  font-weight: bold;
+  font-size: 1rem;
+  color: #333;
+  line-height: 1.6;
+  margin-top: 10px;
+  text-align: justify; 
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.centered-text {
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  text-align: center; 
+  height: 100%; 
+  font-family: 'Lucida Handwriting', cursive;
+  background-color: #3d1c7f;
+  border-radius: 10px;
+  margin-top: 6px; 
+  padding: 35px;
+}
+
+.centered-text p {
+  margin: 2px; 
+  padding: 2px; 
+}
+
+..social-links a {
+  color: inherit; 
+  text-decoration: none; 
+  margin-right: 30px; 
+}
+
+.social-links a:hover {
+  color: inherit;
+}
+
+.social-links a .linkedin-icon {
+  color: #0077b5; 
+}
+
+.social-links a .github-icon {
+  color: #ffffff; 
+}
+
+.social-links a .discord-icon {
+  color: #7655ed;
 }
