--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -15,7 +15,7 @@
   margin: 0 auto;
   width: 100%;
   padding-left: 0;
-  padding-right: 20px; /* Optional */
+  padding-right: 20px; 
   display: flex;
   justify-content: space-between;
   align-items: center;
